# 基本设置 
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (SlamLab)

# 查找必要头文件
INCLUDE ( ${CMAKE_ROOT}/Modules/CheckIncludeFile.cmake )
# stdint.h
CHECK_INCLUDE_FILE( "stdint.h" HAVE_STDINT_H )
IF( HAVE_STDINT_H )
	ADD_DEFINITIONS( -DHAVE_STDINT_H )
ENDIF( HAVE_STDINT_H )
# math.h
CHECK_INCLUDE_FILE( "math.h" HAVE_MATH_H )
IF( HAVE_MATH_H )
	ADD_DEFINITIONS( -DHAVE_MATH_H )
ENDIF( HAVE_MATH_H )

#------------- 信息输出配置选项 ----------------------
OPTION ( INFORMATION_OUTPUT_SWITCH "Information output switch" )
IF ( INFORMATION_OUTPUT_SWITCH )
	ADD_DEFINITIONS( -DINFO_ON )
ENDIF( INFORMATION_OUTPUT_SWITCH )	


# 查找player库
INCLUDE (FindPkgConfig)
PKG_SEARCH_MODULE ( PLAYERCXX playerc++>=2.1.0 )
IF( PLAYERCXX_FOUND )
	MESSAGE( STATUS ${INDENT} "PlayerC++ version ${PLAYERCXX_VERSION} detected at ${PLAYERCXX_PREFIX}" )
	MESSAGE( STATUS "    PLAYER C++_CFLAGS: ${PLAYERCXX_CFLAGS}" )
	MESSAGE( STATUS "    PLAYER C++_LDFLAGS: ${PLAYERCXX_LDFLAGS}"  )
	MESSAGE( STATUS "	 PLAYER C++_LIBS: ${PLAYERCXX_LIBRARIES}" )
ELSE( PLAYERCXX_FOUND )
	MESSAGE(STATUS ${INDENT} "Player not detected. If Player is installed but not detected, check your PKG_CONFIG_PATH." )
ENDIF( PLAYERCXX_FOUND )


# 子目录
ADD_SUBDIRECTORY ( misc )
ADD_SUBDIRECTORY ( gridmap )
ADD_SUBDIRECTORY ( bridge )
ADD_SUBDIRECTORY ( playerwrapper )
ADD_SUBDIRECTORY ( mapbuilder )
ADD_SUBDIRECTORY ( vfh )
ADD_SUBDIRECTORY ( planner )
ADD_SUBDIRECTORY ( test ) 
ADD_SUBDIRECTORY ( tools )
